--- a/src/app/components/solicitar-turno/solicitar-turno.component.css
+++ b/src/app/components/solicitar-turno/solicitar-turno.component.css
@@ -40,20 +40,6 @@ h3,h4,h5,h6{
   height: 100px;
 }
 
-.circular-div-especialidades{
-  width: 150px;
-  height: 150px;
-  border-radius: 15px; /* Bordes redondeados */
-  overflow: hidden;
-  position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  transition: all 0.3s ease-in-out;
-  cursor: pointer; /* Añadir cursor de mano para indicar que es un botón */
-  background-color: darkslategrey;
-}
-
 /* .circular-div {
   width: 150px;
   height: 150px;
@@ -113,7 +99,19 @@ div[appBtnCircularEsp]:hover {
   /* Add !important to ensure it overrides */
 }
 
-
+div[appBtnCuadradoEspecialidad]{
+  width: 150px;
+  height: 150px;
+  border-radius: 15px;
+  overflow: hidden;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: all 0.3s ease-in-out;
+  cursor: pointer;
+  background-color: darkslategrey;
+}
 /* .circular-div:hover,
 .paciente-div:hover{
   transform: scale(1.1); 
